--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\WSmit about.png" alt="Willem Smit" />
                 </div>
                 <p>
-                    I'm a 26-year-old IT Specialist based in Cape Town, South Africa.
-                    Since starting my career in 2021, I’ve been driven by a lifelong passion for technology, gaming, and building things from the ground up.
-                    <br><br>
-                    My work has involved leading projects and managing both technical and tactical aspects, particularly in IT infrastructure.
-                    I’ve gained strong experience in servers, firewalls, and VoIP systems, and I enjoy solving complex issues to keep systems
-                    running smoothly.
-                    <br><br>
-                    Beyond infrastructure, I have a strong interest in coding and enjoy building websites and apps in my spare time.
-                    I'm always looking to learn more and explore new opportunities in the tech world.
+                    I'm an IT Specialist based in Cape Town with a passion for technology, gaming, and building creative solutions. 
+                    Since 2021, I’ve led infrastructure projects, managed servers, firewalls, and VoIP systems, and thrived on solving 
+                    complex technical challenges.<br><br>
+                    Outside of core IT, I’m deeply interested in coding and software development. I enjoy building custom websites, 
+                    web apps, and automation tools.
+                    I'm always learning and love bridging the gap between infrastructure and development.
                     <br><br>
                 </p>
             </div>
@@ -89,14 +86,13 @@
                         <span><a href="www.dkps.org.za" class="custom-link">www.dkps.org.za</a></span>
                     </div>
                     <p>
-                        Delivering comprehensive technical support and managing server and network
-                        infrastructure, including Windows Server 2019. Leading IT modernization and
-                        project initiatives, while administering Office 365 and ESET systems. 
-                        Overseeing ICT and sound/lighting operations as Profile Head, supporting 
-                        events as a sound technician. Educating learners from Grade 1 to 7 using Cami 
-                        and Greenshoots Maths, coaching robotics and sports, and conducting IT workshops.
-                        Also serving as SGBS secretary, providing organizational and administrative support.
-                    </p>
+                        Providing end-to-end technical support while managing server and network infrastructure, 
+                        including Windows Server 2019. Driving IT modernization and leading project initiatives, 
+                        with hands-on administration of Office 365 and ESET systems. Serving as ICT and sound/lighting 
+                        Profile Head, offering technical support for events as a sound technician. Educating Grade 1–7 
+                        learners using Cami and Greenshoots Maths, and actively coaching robotics and sports. Facilitating 
+                        IT workshops and contributing as the SGBS secretary, delivering key organizational and administrative support.
+                        </p>
                     <div class="experience-skills">
                         <span class="skill">ICT</span>
                         <span class="skill">Network Admin</span>
@@ -132,6 +128,7 @@
                     <div class="experience-skills">
                         <span class="skill">Time Management</span>
                         <span class="skill">Logistics</span>
+                        <span class="skill">Driver</span>
                         <span class="skill">Warehouse Worker</span>
                     </div>
                 </div>
@@ -203,19 +200,19 @@
         <div class="skills-container">
             <h2>Skills</h2>
             <div class="skills-image">
-            <a href="https://www.yeastar.com/">
-            <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\yeastar.png" alt="" />
-            </a>
-		<a href="https://www.ui.com/">
+                <a href="https://www.yeastar.com/">
+                <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\yeastar.png" alt="" />
+                </a>
+		        <a href="https://www.ui.com/">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\ubi.png" alt="" />
                 </a>
-		<a href="https://www.hpe.com/za/en/networking/hpe-aruba-networking.html">
+		        <a href="https://www.hpe.com/za/en/networking/hpe-aruba-networking.html">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\aru.png" alt="" />
                 </a>
-		<a href="https://openvpn.net/">
+		        <a href="https://openvpn.net/">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\openvpn.png" alt="" />
                 </a>
-		<a href="https://www.office.com/">
+		        <a href="https://www.office.com/">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\microsoft.png" alt="" />
                 </a>
 		<a href="https://www.microsoft.com/en-us/evalcenter/evaluate-windows-server-2019">
@@ -252,7 +249,7 @@
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\Jotform.png" alt="" />
                 </a>
 		
-       <a href="https://www.w3schools.com/html/">
+                <a href="https://www.w3schools.com/html/">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\html5.svg" alt="" />
                 </a>
                 <a href="https://www.w3schools.com/css/">
@@ -296,16 +293,38 @@
                 </a>
                 
             </div>
+            <h2>Credentials</h2>
+            <div class="credentials">
+                <h5>- MS-900: Microsoft Certified: Microsoft 365 Fundamentals</h5>
+                <h5>- MS-102: Microsoft 365 Administrator</h5>
+                <h5>- MS-700: Microsoft 365 Certified: Teams Administrator Associate	</h5>
+                <h5>- AZ-900: Microsoft Certified: Azure Fundamentals </h5>
+                <h5>- AZ-104: Azure Administrator Associate	</h5>
+                <h5>- AZ-204: Azure Developer Associate	</h5>
+                <h5>- ESET Cyber Security    </h5>
+                <h5>- Abusenomore WCED    </h5>
+                <h5>- TimeDesign 6.0 Timetable    </h5>
+                <h5>- ProGen (Assets/Textbook/Library)  </h5>
+                <h5>- First Aid level 1</h5>
+                <h5>- Sage Pastal Payroll   </h5>	
+                <h5>- License Code A & B & Public Driving Permit</h5>
+                <h5>- Bachelor of Science in Information Technology (BSc IT)</h5>
+                <h5>- National Senior Certificate (NSc)</h5>
+            </div>
         </div>
+
     </section>
 
     <section class="card-section">
         <h2>My Projects</h2>
         <h4>Websites</h4>
+
         <div class="card-row">
             <div class="card">
                 <div class="card-image">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\barbaroozos.png" alt="Company Logo" class="company-logo">
+                </div>
+                <div class="fade-divider">
                 </div>
                 <div class="card-description">
                     <h3>
@@ -319,6 +338,7 @@
                 <div class="card-image">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\dkps.png" alt="Company Logo" class="company-logo">
                 </div>
+                <div class="fade-divider"></div>
                 <div class="card-description">
                     <h3> De Kuilen Primary School</h3>
                     <p>Dynamic high traffic website through wordpress that gets updated frequenlty.</p>
@@ -329,6 +349,7 @@
                 <div class="card-image">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\expertree.png" alt="Company Logo" class="company-logo">
                 </div>
+                <div class="fade-divider"></div>
                 <div class="card-description">
                     <h3>Tree Expert</h3>
                     <p>Static website that was built on google sites.</p>
@@ -351,6 +372,7 @@
                 <div class="card-image">
                     <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\localislekker.png" alt="Company Logo" class="company-logo">
                 </div>
+
                 <div class="card-description">
                     <h3> Local is Lekker Driving School</h3>
                     <p>Static website HTML and CSS</p>
@@ -369,87 +391,83 @@
         </div>
         <br><br>
         <h4>Developments</h4>
+ <div class="dev-container">
 
-        <div class="card-row">
-            <div class="card">
-                <div class="card-image">
-                    <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\ticketingsystem.png" alt="Company Logo" class="company-logo">
-                </div>
-                <div class="card-description">
-                    <h3>
-                        Ticketing System
-                    </h3>
-                    <p>This system allows users to submit IT support tickets by entering 
-                    their name, describing the problem, and marking urgency. Each ticket 
-                    is assigned a unique ID, saved via PHP, and confirmed with an alert.<br> 
-                    XAMPP, HTML, CSS, JS, PHP</p>
-                </div>
-            </div>
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\housepoints.png" alt="Company Logo" class="company-logo">
-                </div>
-                <div class="card-description">
-                    <h3>Color House Point Tracking System</h3>
-                    <p>
-                        The system allows teachers to allocate house points to students 
-                        based on positive behavior, automatically updates totals for each 
-                        house, and submits the data to a backend for storage and tracking.<br>
-                        XAMPP, HTML, CSS, JS, PHP, JQuery.
-                    </p>
-                </div>
-            </div>
+  <div class="dev-project-wrapper">
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\pygame.png" alt="Company Logo" class="company-logo">
-                </div>
-                <div class="card-description">
-                    <h3>Pygame</h3>
-                    <p>Alien Invaders is a retro-style 2D arcade shooter where players control 
-                    a pixel spaceship to destroy waves of descending aliens. Difficulty increases 
-                    with score, adding faster enemies, wave-like movement, random lasers, and power-ups. 
-                    High scores are tracked and saved in a text document for replay value.
-                    <br>Python</p>
-                </div>
-            </div>
+    <div class="dev-project">
+      <div class="carousel">
+        <button class="prev">&#10094;</button>
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\HousePointsAllocationPage.png" alt="Slide 1">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\FilteredSubmissions.png" alt="Slide 2" style="display:none;">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\HousePointsAllocationPageFilled.png" alt="Slide 3" style="display:none;">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\SavedDataHouse.png" alt="Slide 4" style="display:none;">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\SavedDataSubmissions.png" alt="Slide 5" style="display:none;">
+        <button class="next">&#10095;</button>
+      </div>
+    </div>
+    <div class="dev-heading">
+      <h3>House Point Tracking System</h3>
+      <p class="dev-description">Developed a web-based system that allows teachers to allocate house points to students based on positive behavior. The system automatically updates house totals and stores the data on a backend for ongoing tracking.<br><br>XAMPP, HTML, CSS, JavaScript, PHP, and JQuery.</p>
+    </div>
+  </div>
+  <!-- Repeat for other projects -->
+  <div class="dev-project-wrapper">
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\emake.png" alt="Company Logo" class="company-logo">
-                </div>
-                <div class="card-description">
-                    <h3>
-                        EMake Automation
-                    </h3>
-                    <p>I’ve automated user requests using Jotform, Make.com, Dropbox, and email: 
-                    Users submit a form via Jotform, which populates a Word document. The document 
-                    is saved to Dropbox and then emailed to the relevant recipients—streamlining requests, 
-                    ensuring consistency, and reducing manual work.</p>
-                </div>
-            </div>
+    <div class="dev-project">
+      <div class="carousel">
+        <button class="prev">&#10094;</button>
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\ticketingsystem1.png" alt="Slide 1">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\ViewSubmittedTickets.png" alt="Slide 2" style="display:none;">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\TicketingSystem2.png" alt="Slide 3" style="display:none;">
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\Submittedfolder.png" alt="Slide 4" style="display:none;">
+        
+        <button class="next">&#10095;</button>
+      </div>
+    </div>
+    <div class="dev-heading">
+      <h3>Ticketing System</h3>
+      <p class="dev-description"> Designed and implemented an IT support ticketing system that allows users to submit tickets by entering their name, describing the issue, and selecting urgency. Each ticket is assigned a unique ID and saved as a separate text document on the backend using PHP. The Administrators receive an automatic alert to about each submission via PHPMailer.<br><br> XAMPP, HTML, CSS, JavaScript, PHP, PHPMailer.</p>
+    </div>
+  </div>
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\dkps.png" alt="Company Logo" class="company-logo">
-                </div>
-                <div class="card-description">
-                    <h3> De Kuilen Primary School</h3>
-                    <p>Dynamic high traffic website through wordpress that gets updated frequenlty.</p>
-                </div>
-            </div>
+  <div class="dev-project-wrapper">
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\expertree.png" alt="Company Logo" class="company-logo">
-                </div>
-                <div class="card-description">
-                    <h3>Tree Expert</h3>
-                    <p>Static website that was built on google sites.</p>
-                </div>
-            </div>
-        </div>
+    <div class="dev-project">
+      <div class="carousel">
+        <button class="prev">&#10094;</button>
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\emake.png" alt="Slide 1">
+         <button class="next">&#10095;</button>
+      </div>
+    </div>
+    <div class="dev-heading">
+      <h3>EMake Automation Workflow</h3>
+      <p class="dev-description">Automated user request processing by integrating Jotform, Make.com, Dropbox, and email services. User submissions through Jotform dynamically populate a Word document, which is automatically saved to Dropbox and emailed to designated recipients. This workflow streamlines request handling, ensures consistency, and significantly reduces manual intervention.<br><br>XAMPP, HTML, CSS, JavaScript, PHP, and JQuery.</p>
+    </div>
+  </div>
+
+  
+
+  <div class="dev-project-wrapper">
+
+    <div class="dev-project">
+      <div class="carousel">
+        <button class="prev">&#10094;</button>
+        <img src="C:\Users\Willem Smit\OneDrive - De Kuilen Primary School\Desktop\WAS\pygame.png" alt="Slide 1">
+         <button class="next">&#10095;</button>
+      </div>
+    </div>
+    <div class="dev-heading">
+      <h3>PYGame</h3>
+      <p class="dev-description">Alien Invaders is a retro-style 2D arcade shooter where players control a pixel spaceship to destroy waves of descending aliens. Difficulty increases with score, adding faster enemies, wave-like movement, random lasers, and power-ups. High scores are tracked and saved in a text document for replay value.<br><br>Python</p>
+    </div>
+  </div>
+
+ 
+</div>
+
+   
     </section>
 
     <section id="contact">
