--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://github.com/Willemsmit99/portfolio/blob/main/WSmit%20About.png" alt="Willem Smit" />
+                    <img src="WSmit about.png" alt="Willem Smit" />
                 </div>
                 <p>
                     I'm an IT Specialist based in Cape Town with a passion for technology, gaming, and building creative solutions. 
