--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="WSmit about.png" alt="Willem Smit" />
+                    <img src="https://willemandries99.github.io/portfolio/WSmit about.png" alt="Willem Smit" />
                 </div>
                 <p>
                     I'm an IT Specialist based in Cape Town with a passion for technology, gaming, and building creative solutions. 
